# rknazo-2025

./: Dockerfile  LICENSE  README.md
design/00-my_users/: readme.md
design/01-dont_get_lost/: readme.md
design/02-pipe_worker/: readme.md
design/03-say_millions_of_yes_to_me!/: readme.md
design/04-sleep_lover/: readme.md
design/05-patch_your_neko/: readme.md
design/06-easy_http/: readme.md
src/: build.py  requirements.txt
src/chal/00-my_users/: metadata.py  tips.txt
src/chal/01-dont_get_lost/: metadata.py  tips.txt
src/chal/02-pipe_worker/: metadata.py
src/chal/02-pipe_worker/scripts/: data_h_gen.py
src/chal/02-pipe_worker/src/: challenge.c
src/chal/03-say_millions_of_yes_to_me!/: metadata.py
src/chal/03-say_millions_of_yes_to_me!/src/: challenge.c  data.h
src/chal/04-sleep_lover/: metadata.py
src/chal/04-sleep_lover/src/: challenge.c
src/chal/05-patch_your_neko/: metadata.py  tips.txt
src/chal/05-patch_your_neko/src/: lib.c
src/chal/06-easy_http/: metadata.py  tips.txt
src/chal/06-easy_http/daemon/: Cargo.toml
src/chal/06-easy_http/daemon/src/: lib.rs  main.rs
src/scripts/: data_h_gen.py
