[package]
name = "daemon"
version = "0.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0.86"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.4", features = ["tokio"] }
litcrypt = "0.3.0"
log = "0.4.21"
once_cell = "1.19.0"
rand = "0.8.5"
simple_logger = "5.0.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "time", "net"] }
